--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
   </head>
 
   <body>
+
+
     <div class="main-container">
       <div class="img-container">
         <img class="product-img" src="images/image-product-mobile.jpg" alt="" />
-        <img class="product-img-large" src="images/image-product-desktop.jpg" alt="" />
+        <img
+          class="product-img-large"
+          src="images/image-product-desktop.jpg"
+          alt=""
+        />
       </div>
 
       <div class="text-container">
@@ -72,6 +78,12 @@
           </button>
         </div>
       </div>
+    </div>
+
+    <div class="attribution">
+      
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/macagr17" target="_blank">Mark John Aguirre</a>.
     </div>
   </body>
 </html>
