--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="attribution">
       
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/macagr17" target="_blank">Mark John Aguirre</a>.
+      Coded by <a href="https://www.frontendmentor.io/profile/macagr17" target="_blank">Mark John Aguirre</a>.
     </div>
   </body>
 </html>
