--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
 
 
-    <div class="main-container">
+    <main class="main-container">
       <div class="img-container">
         <img class="product-img" src="images/image-product-mobile.jpg" alt="" />
         <img
@@ -78,12 +78,12 @@
           </button>
         </div>
       </div>
-    </div>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.frontendmentor.io/profile/macagr17" target="_blank">Mark John Aguirre</a>.
-    </div>
+    </footer>
   </body>
 </html>
