--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
 
 
-    <main class="main-container">
+    <main class="main-container" role="main">
       <div class="img-container">
         <img class="product-img" src="images/image-product-mobile.jpg" alt="" />
         <img
@@ -80,7 +80,7 @@
       </div>
     </main>
 
-    <footer class="attribution">
+    <footer class="attribution" role="contentinfo">
       
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://www.frontendmentor.io/profile/macagr17" target="_blank">Mark John Aguirre</a>.
